update index.html file

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
                 <label for="improved" class="choice">
                     What would you like to see improved? <span>(Check all that apply)</span>
                     <label for="be"><input class="inline" type="checkbox" name="be" id="be">Back-end Projects</label>
-                    <label for="dv"><input class="inline" type="checkbox" name="dv" id="dv">Data Visualization</label>
+                    <label for="dv"><input class="inline" type="checkbox" name="dv" id="dv">Data t#fffis {
+    background-color: #37af65;
+    color: white;
+}ualization</label>
                 </label>
                 <label for="comment">
                     Any comments or suggestion?
